# dnn

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  docker-compose.yml  download.py  flake.nix  inference.py  notebook.ipynb  pyproject.toml
baseline/: clahe.py  gamma_correction.py
demo/: app.py
logs/exp_1/: events.out.tfevents.1768823738.8a61917de6b6.497.0  events.out.tfevents.1768824945.8a61917de6b6.497.1
logs/exp_2/: events.out.tfevents.1768831931.3d375d54b6e4.446.0
logs/exp_3/: events.out.tfevents.1768835972.3d375d54b6e4.446.2
logs/exp_4/: events.out.tfevents.1768839570.DESKTOP-VP2ONCK.15004.0
slides/: main.typ
snapshots/: Epoch_Final.pth
snapshots/exp3/: Epoch0.pth  Epoch1.pth  Epoch10.pth  Epoch11.pth  Epoch12.pth  Epoch13.pth  Epoch14.pth  Epoch15.pth  Epoch16.pth  Epoch17.pth  Epoch18.pth  Epoch19.pth  Epoch2.pth  Epoch20.pth  Epoch21.pth  Epoch22.pth  Epoch23.pth  Epoch24.pth  Epoch25.pth  Epoch26.pth  Epoch27.pth  Epoch28.pth  Epoch29.pth  Epoch3.pth  Epoch30.pth  Epoch31.pth  Epoch32.pth  Epoch33.pth  Epoch34.pth  Epoch35.pth  Epoch36.pth  Epoch37.pth  Epoch38.pth  Epoch39.pth  Epoch4.pth  Epoch40.pth  Epoch41.pth  Epoch42.pth  Epoch43.pth  Epoch44.pth  (+11 more)
snapshots/exp4/: Epoch_Final.pth
study/: clean_artifacts.py  comparison.py  inference.py  merge.py
